# programmeerproject_project

./: .gitignore  README.md  app.py  data_extraction.py  pyproject.toml
modules/: data_extraction_class.py  data_extraction_constants.py  data_extraction_dataframe_parser.py  data_extraction_main.py
project_log/: project_log.md
proposal/: proposal.md
templates/: find.html  index.html  layout.html  login.html
